discussion/kv_engine/158218/158218_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-36377: Add and use RocksDBKVStoreTransactionContext

Add a RocksDBKVStoreTransactionContext and use it to hold the
pending requests instead of the member in RocksDBKVStore.

Change-Id: I0c881d25ed0b207c623432e14c1f4e0dc6d8f149

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2021-07-26 17:20:06.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-07-26 18:33:34.000000000
Message: 
Patch Set 1: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10844/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:557:17: error: non-const lvalue reference to type "RocksDBKVStoreTransactionContext" cannot bind to a value of unrelated type "TransactionContext" [clang-diagnostic-error]
    auto& ctx = static_cast<RocksDBKVStoreTransactionContext&>(txnCtx);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:681:17: error: non-const lvalue reference to type "RocksDBKVStoreTransactionContext" cannot bind to a value of unrelated type "TransactionContext" [clang-diagnostic-error]
    auto& ctx = static_cast<RocksDBKVStoreTransactionContext&>(txnCtx);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:785:17: error: non-const lvalue reference to type "RocksDBKVStoreTransactionContext" cannot bind to a value of unrelated type "TransactionContext" [clang-diagnostic-error]
    auto& ctx = static_cast<RocksDBKVStoreTransactionContext&>(txnCtx);
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:1916:12: error: no viable conversion from returned value of type "unique_ptr<RocksDBKVStoreTransactionContext>" to function return type "unique_ptr<TransactionContext>" [clang-diagnostic-error]
    return std::make_unique<RocksDBKVStoreTransactionContext>(vbid,
           ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:320:12: note: candidate constructor template not viable: no known conversion from "typename _MakeUniq<RocksDBKVStoreTransactionContext>::__single_object" (aka "unique_ptr<RocksDBKVStoreTransactionContext>") to "std::nullptr_t" (aka "nullptr_t") for 1st argument
        constexpr unique_ptr(nullptr_t) noexcept
                  ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:327:7: note: candidate constructor not viable: no known conversion from "typename _MakeUniq<RocksDBKVStoreTransactionContext>::__single_object" (aka "unique_ptr<RocksDBKVStoreTransactionContext>") to "std::unique_ptr<TransactionContext, std::default_delete<TransactionContext> > &&" for 1st argument
      unique_ptr(unique_ptr&&) = default;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:468:7: note: candidate constructor not viable: no known conversion from "typename _MakeUniq<RocksDBKVStoreTransactionContext>::__single_object" (aka "unique_ptr<RocksDBKVStoreTransactionContext>") to "const std::unique_ptr<TransactionContext, std::default_delete<TransactionContext> > &" for 1st argument
      unique_ptr(const unique_ptr&) = delete;
      ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/type_traits:2192:46: note: candidate template ignored: disabled by "enable_if" [with _Up = RocksDBKVStoreTransactionContext, _Ep = std::default_delete<RocksDBKVStoreTransactionContext>]
    using __enable_if_t = typename enable_if<_Cond, _Tp>::type;
                                             ^
/opt/gcc-10.2.0/lib/gcc/x86_64-pc-linux-gnu/10.2.0/../../../../include/c++/10.2.0/bits/unique_ptr.h:350:2: note: candidate template ignored: could not match "auto_ptr" against "unique_ptr"
        unique_ptr(auto_ptr<_Up>&& __u) noexcept;
        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:1922:7: error: type "TransactionContext" is not a direct or virtual base of "RocksDBKVStoreTransactionContext" [clang-diagnostic-error]
    : TransactionContext(vbid, std::move(cb)),
      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.h:554:50: error: base class has incomplete type [clang-diagnostic-error]
struct RocksDBKVStoreTransactionContext : public TransactionContext {
                                                 ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/kvstore.h:62:8: note: forward declaration of "TransactionContext"
struct TransactionContext;
       ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10844/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.cc:557:17:
error: non-const lvalue reference to type "RocksDBKVStoreTransactionContext" cannot bind to a value of unrelated type "TransactionContext" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/10844/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32441/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/rocksdb-kvstore/rocksdb-kvstore.h:554:50:
error: base class has incomplete type
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/32441/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12433/ : FAILURE

Compile error at [2021-07-26T17:56:12.285Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: invalid use of incomplete type ?class PersistenceCallback?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/12433/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12610/ : FAILURE

Compile error at [2021-07-26T17:56:57.130Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: invalid use of incomplete type ?class PersistenceCallback?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/12610/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/434/ : FAILURE

Compile error at [2021-07-26T17:26:26.548Z] /opt/gcc-10.2.0/include/c++/10.2.0/bits/unique_ptr.h:962:30:
error: invalid use of incomplete type ?class PersistenceCallback?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/434/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/9505/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/38051/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/462/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/12960/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/20511/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/11545/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
